Task for js and css minif

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>NEW</title>
-    <link rel="stylesheet" href="css/app.css">
-</head>
-<body>
+<!-- partial:partial/_header.html -->
+<!-- partial -->
+
     <h1>HELLO GULP Meginu</h1>
     Nu tikrai :)
     
@@ -29,7 +24,7 @@
             </script>
         </div>
     </div>
+
+<!-- partial:partial/_footer.html -->
+<!-- partial -->
     
-    <script src="js/main.js"></script>
-</body>
-</html>
